--- a/index.html
+++ b/index.html
@@ -1,6 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    
+<title>Seguir Canal</title>
+<style>
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background: #fafafa;
+        font-family: Arial, sans-serif;
+    }
+    .popup {
+        background: #fff;
+        border-radius: 10px;
+        padding: 20px 30px;
+        box-shadow: 0 0 15px rgba(0,0,0,0.15);
+        text-align: center;
+    }
+    .popup h2 {
+        margin-bottom: 20px;
+    }
+    button {
+        padding: 12px 20px;
+        margin: 10px;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+    .yes {
+        background: #ff0000;
+        color: white;
+    }
+    .no {
+        background: gray;
+        color: white;
+    }
+</style>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PrintMaster - Sistema de Impressão</title>
@@ -983,4 +1022,5 @@
     </script>
 © 2025 Pibbaweb - Informática & Acessórios. Todos os direitos reservados.
 </body>
+
 </html>
