--- a/index.html
+++ b/index.html
@@ -984,6 +984,43 @@
     </script>
 © 2025 Pibbaweb - Informática & Acessórios. Todos os direitos reservados.
 </body>
-
+<title>Seguir Canal</title>
+<style>
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background: #fafafa;
+        font-family: Arial, sans-serif;
+    }
+    .popup {
+        background: #fff;
+        border-radius: 10px;
+        padding: 20px 30px;
+        box-shadow: 0 0 15px rgba(0,0,0,0.15);
+        text-align: center;
+    }
+    .popup h2 {
+        margin-bottom: 20px;
+    }
+    button {
+        padding: 12px 20px;
+        margin: 10px;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+    .yes {
+        background: #ff0000;
+        color: white;
+    }
+    .no {
+        background: gray;
+        color: white;
+    }
+</style>
 </html>
+
 
